# afran

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  run.ps1  server.txt
.agents/skills/afran-angular-dev/: SKILL.md
.agents/skills/afran-fastapi-dev/: SKILL.md
backend/: .dockerignore  Dockerfile  afran.db  main.py  pyproject.toml
backend/src/: api.py  config.py
backend/src/auth/: auth.py
backend/src/database/: db.py  models.py
backend/src/models/: auth.py  cash_register.py  goods_receipt.py  payment.py  supplier.py  supplier_return.py
backend/src/routers/: auth.py  cash_register.py  goods_receipt.py  payments.py  reports.py  stats.py  supplier_return.py  suppliers.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: index.html  styles.scss
frontend/src/app/: api.config.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/auth/: admin.guard.ts  auth.guard.ts  auth.interceptor.ts  auth.service.ts
frontend/src/app/cash-register/: cash-register.html  cash-register.scss  cash-register.ts
frontend/src/app/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
frontend/src/app/login/: login.html  login.scss  login.ts
frontend/src/app/payments/: payment-dialog.ts  payments.html  payments.scss  payments.ts
frontend/src/app/receipts/: receipt-edit.html  receipt-edit.scss  receipt-edit.ts  receipts.html  receipts.scss  receipts.ts
frontend/src/app/register/: register.html  register.scss  (+1 more)
frontend/src/environments/: environment.ts
(+41 files in other folders)
